# cc-switch-web

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_DE.md  README_JA.md  README_ZH.md  UPSTREAM_COMPATIBILITY.md  cc-switch-mini.md  cc-switch-web.md  package.json  pnpm-lock.yaml  vite.config.ts
.ccsm/: DEVELOPMENT.md
.ccsm/bridge/api/: app.ts  core.ts  event.ts  package.json  path.ts  shared.ts  window.ts
.ccsm/bridge/plugin-dialog/: index.ts  package.json
.ccsm/bridge/plugin-process/: index.ts  package.json
.ccsm/bridge/plugin-store/: index.ts  package.json
.ccsm/bridge/plugin-updater/: index.ts  package.json
.ccsm/deploy/: README.md  cc-switch-mini.service  frpc.snippet.toml  nginx.conf.snippet
.ccsm/scripts/: check-coverage.sh  install.sh  sync-upstream.sh
.ccsm/server/: Cargo.toml
.ccsm/server/src/: auth.rs  cli.rs  dispatch.rs  error.rs  events.rs  lib.rs  main.rs  runtime.rs  state.rs  static_files.rs
.ccsm/server/src/commands_extra/: auth.rs  claude.rs  codex_history.rs  deeplink.rs  failover.rs  mcp.rs  mod.rs  omo.rs  openclaw.rs  opencode.rs  pricing.rs  prompt.rs  provider.rs  proxy.rs  session.rs  skill.rs  sync.rs  tests.rs  tools.rs  usage.rs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/guides/: codex-unified-session-history-guide-en.md  codex-unified-session-history-guide-ja.md  codex-unified-session-history-guide-zh.md
docs/release-notes/: v3.16.3-en.md  v3.16.3-ja.md  v3.16.3-zh.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_desktop_config.rs  claude_mcp.rs  codex_config.rs  codex_history_migration.rs  config.rs  lib.rs  provider.rs  settings.rs
src-tauri/src/commands/: misc.rs  settings.rs  stream_check.rs
src-tauri/src/database/: schema.rs
src-tauri/src/deeplink/: provider.rs
src-tauri/src/proxy/: forwarder.rs
src-tauri/src/services/: coding_plan.rs  proxy.rs  subscription.rs  usage_stats.rs
src-tauri/src/services/provider/: live.rs  mod.rs
src-tauri/tests/: provider_service.rs
src/components/providers/: ProviderActions.tsx  ProviderCard.tsx  ProviderList.tsx
src/components/providers/forms/: ClaudeDesktopProviderForm.tsx  ProviderForm.tsx  ProviderPresetSelector.tsx
src/components/sessions/: SessionManagerPage.tsx
src/components/settings/: AboutSection.tsx  SettingsPage.tsx
src/config/: claudeDesktopProviderPresets.ts  claudeProviderPresets.ts  codexProviderPresets.ts  hermesProviderPresets.ts  openclawProviderPresets.ts  opencodeProviderPresets.ts
src/i18n/locales/: en.json  ja.json  zh-TW.json  zh.json
src/utils/: providerConfigUtils.ts
tests/components/: ProviderPresetSelector.test.tsx
